# daily-briefing

./: CLAUDE.md  Cargo.toml  Containerfile  README.md  config.example.toml  daily-briefing.container
.github/workflows/: publish.yml  test.yml
crates/daily-briefing/: Cargo.toml
crates/daily-briefing-core/: Cargo.toml
crates/daily-briefing-core/src/: lib.rs
crates/daily-briefing-core/src/input/: mod.rs
crates/daily-briefing-core/src/output/: mod.rs
crates/daily-briefing-core/src/processor/: mod.rs
crates/daily-briefing/src/: main.rs
crates/daily-briefing/src/config/: mod.rs  tests.rs
crates/daily-briefing/src/runner/: mod.rs
crates/daily-briefing/tests/: integration_config.rs
crates/input-fever/: Cargo.toml  README.md
crates/input-fever/src/: lib.rs
crates/input-fever/src/client/: mod.rs  tests.rs
crates/input-home-assistant-metrics/: Cargo.toml  README.md
crates/input-home-assistant-metrics/src/: lib.rs
crates/input-home-assistant-metrics/src/client/: mod.rs  tests.rs
crates/output-home-assistant/: Cargo.toml  README.md
crates/output-home-assistant/src/: lib.rs
crates/output-home-assistant/src/client/: mod.rs  tests.rs
crates/output-speech/: Cargo.toml  README.md
crates/output-speech/src/: lib.rs  tests.rs
crates/output-webpage/: Cargo.toml  README.md
crates/output-webpage/src/: lib.rs  tests.rs
crates/output-webpage/src/server/: mod.rs  tests.rs
crates/output-webserver/: Cargo.toml
crates/output-webserver/src/: lib.rs
crates/output-webserver/src/server/: mod.rs  tests.rs
crates/processor-anthropic/: Cargo.toml  README.md
crates/processor-anthropic/src/: lib.rs
crates/processor-anthropic/src/client/: mod.rs  tests.rs
crates/webserver/: Cargo.toml
crates/webserver/src/server/: tests.rs
